deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neonoble-ramp
  labels:
    app.kubernetes.io/name: neonoble-ramp
