deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neonoble-ramp
  namespace: neonoble-ramp
  labels:
    app.kubernetes.io/name: neonoble-ramp
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: neonoble-ramp
  ports:
    - name: http
      port: 80
      targetPort: http
