deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neonoble-ramp
  namespace: neonoble-ramp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "2m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Referrer-Policy: strict-origin-when-cross-origin";
      more_set_headers "X-Content-Type-Options: nosniff";
spec:
  tls:
    - hosts:
        - app.neonoble.io
      secretName: neonoble-ramp-tls
  rules:
    - host: app.neonoble.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neonoble-ramp
                port:
                  name: http
